# Hackathon

./: main.py  pyproject.toml
db/: schema.sql
hera/server/: database.py  main.py
hera/server/api/heath_professional/: model.py  route.py  schema.py
hera/server/api/pacient/: model.py  route.py  schema.py
