[tool.poetry]
name = "hera"
version = "0.1.0"
description = ""
authors = ["Nuno Carriço <nuno.mcarrico@decsis.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.7"
langchain = "^0.0.346"
python-dotenv = "^1.0.0"
fastapi = "^0.104.1"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
