[tool.poetry]
name = "hera"
version = "0.1.0"
description = ""
authors = ["Nuno Carriço <nuno.mcarrico@decsis.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "0.28.0"
openai = "^1.3.7"
langchain = "^0.0.346"
python-dotenv = "^1.0.0"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
sqlalchemy = "2.0.20"
uvicorn = "^0.24.0.post1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
